--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">鹰眼</string>
+    <string name="days">/30 天</string>
+    <string name="exp">"经验值 "</string>
 </resources>
